--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_centerVertical="true"
         android:text="@string/hello_world"
         tools:context=".MainActivity" />
-
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
@@ -26,17 +26,30 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/textView2"
         android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="30dp"
-        android:text="cliquer" /><Button
+        android:layout_marginBottom="42dp"
+        android:text="cliquer" />
+
+    <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/button1"
         android:layout_alignBottom="@+id/button1"
-        android:layout_alignLeft="@+id/textView2"
-      
+        android:layout_marginLeft="22dp"
+        android:layout_toRightOf="@+id/textView2"
         android:text="ou là" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_alignRight="@+id/button2"
+        android:layout_marginBottom="41dp"
+        android:text="@string/adresse"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
