--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,8 +11,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:orientation="vertical" >
-    </LinearLayout>
 
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,10 +30,10 @@
             android:gravity="center_horizontal"
             android:text="@string/adresse"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-    </LinearLayout>
 
+    </LinearLayout>
+
     <LinearLayout
-        android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -42,19 +43,21 @@
         android:baselineAligned="true"
         android:gravity="right"
         android:orientation="horizontal" >
-
+
         <Button
             android:id="@+id/buttonOK"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="OK" />
-
+
         <Button
             android:id="@+id/buttonAnnuler"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/margin_bouton"
             android:text="Annuler" />
+
     </LinearLayout>
 
     <TextView
@@ -67,15 +70,5 @@
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/made_by"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/linearLayout2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:text="@string/dev_start"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
