--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -56,6 +56,7 @@
             android:id="@+id/buttonOK"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="displayToday"
             android:text="@string/buttonOK" />
 
         <Button
