--- a/res/layout/activity_week.xml
+++ b/res/layout/activity_week.xml
@@ -39,7 +39,7 @@
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="________________________________________"
+        android:text="     "
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
