--- a/res/layout/informations.xml
+++ b/res/layout/informations.xml
@@ -5,47 +5,60 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/made_by"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="@dimen/margin_bouton"
+        android:layout_marginRight="@dimen/margin_bouton"
+        android:gravity="right" >
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
+        android:layout_alignTop="@+id/linearLayout1"
         android:text="@string/dev_start"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-    
-    
-    
-    
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/textView2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="@dimen/margin_bouton"
-        android:layout_marginRight="@dimen/margin_bouton"
-        android:gravity="right" >
-        
-        
-        
-        
-        <Button
-            android:id="@+id/buttonRetour"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="displayMain"
-            android:text="@string/retour" />
+        android:layout_marginBottom="18dp"
+        android:text="@string/version" />
 
-    </LinearLayout>
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/creator" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textView4"
+        android:text="@string/made_by"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <QuickContactBadge
+        android:id="@+id/quickContactBadge1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView1"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="87dp"
+        android:layout_toRightOf="@+id/textView4"
+        android:src="@drawable/groupe_small" />
 
 </RelativeLayout>
