Passage au mode Fragment. Today opérationnel.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,59 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:baselineAligned="false"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical" >
-    </LinearLayout>
-    <LinearLayout 
-	    android:id="@+id/fragmentContainer"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent" 
-		android:orientation="vertical">
-
-    </LinearLayout>
-
-    
-    
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="@dimen/margin_bouton"
-        android:layout_marginRight="@dimen/margin_bouton"
-        android:baselineAligned="true"
-        android:gravity="right"
-        android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/buttonInfos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="displayInfos"
-            android:text="@string/info" />
-
-        <Button
-            android:id="@+id/buttonOK"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/buttonOK" />
-
-        <Button
-            android:id="@+id/buttonAnnuler"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/buttonAnnuler" />
-
-    </LinearLayout>
-
-</RelativeLayout>
+    android:layout_height="match_parent">
+   
+    <FrameLayout
+            android:id="@+id/fragment_contenu"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" >
+     </FrameLayout>
+  
+</LinearLayout>
