--- a/res/layout/activity_today.xml
+++ b/res/layout/activity_today.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    
-	<ScrollView 
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    
-		<TableLayout 
-	         android:id = "@+id/tableau_today"
-	         android:layout_width="fill_parent"
-	         android:layout_height="wrap_content"
-	         android:shrinkColumns="1"
-   			 android:stretchColumns="1"
-	         android:padding="20dp">
-		</TableLayout>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+   android:layout_width="fill_parent"
+   android:layout_height="fill_parent">
+   
+	<TableLayout 
+         android:id = "@+id/tableau_today"
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         android:shrinkColumns="1"
+  			 android:stretchColumns="1"
+         android:padding="20dp">
+	</TableLayout>
 
-	</ScrollView>
-</LinearLayout>
+</ScrollView>
