Le TabWeek affiche maintenant la liste des jour dispo à deux semaines max. Il y a touours un bug avec le premier jour de la deuxième semaine.

--- a/res/layout/activity_week.xml
+++ b/res/layout/activity_week.xml
@@ -4,9 +4,11 @@
    android:layout_height="fill_parent">
    
 	<LinearLayout 
+	    android:id="@+id/layout_affichage_boutons"
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:orientation="vertical" >
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical" 
+	    android:padding="20dp">
 	
 	    <Button
 	        android:id="@+id/week_b1"
