--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -8,10 +8,28 @@
 		<item>Browser</item>
 	</string-array>
 	
-	<string-array name="day">
+	<string-array name="titre_tableau">
 		<item>Heure</item>
 		<item>Matiere</item>
 		<item>Salle</item>
+	</string-array>
+	
+	<string-array name="liste_semestre">
+		<item>1</item>
+		<item>2</item>
+		<item>3</item>
+		<item>4</item>
+	</string-array>
+	
+	<string-array name="liste_groupes">
+		<item>1A</item>
+		<item>1B</item>
+		<item>2A</item>
+		<item>2B</item>
+		<item>3A</item>
+		<item>3B</item>
+		<item>4A</item>
+		<item>4B</item>
 	</string-array>
 
 </resources>
