--- a/res/layout/informations.xml
+++ b/res/layout/informations.xml
@@ -3,7 +3,8 @@
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="5dp" >
 
     <LinearLayout
         android:id="@+id/linearLayout1"
@@ -51,12 +52,12 @@
         android:text="@string/made_by"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 	
-	
-	     <QuickContactBadge
-        android:id="@+id/quickContactBadge1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="14dp"
-        android:layout_marginTop="87dp" />
+	 <QuickContactBadge
+	     android:id="@+id/quickContactBadge1"
+	     android:layout_width="wrap_content"
+	     android:layout_height="wrap_content"
+	     android:layout_marginLeft="14dp"
+	     android:layout_marginTop="87dp"
+	     android:src="@drawable/groupe_small" />
 
 </RelativeLayout>
